fix spacing after paragraph to headline

--- a/legal-notice.css
+++ b/legal-notice.css
@@ -3,3 +3,11 @@
 body {
 	display: block;
 }
+
+.copy-10+.headline-10 {
+	margin-top: calc(var(--spacing10) * 1.75);
+}
+
+.copy-10+.headline-20 {
+	margin-top: calc(var(--spacing10) * 1.75);
+}
